fixed alignment issue in contact section in footer

--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,10 @@ nav a:focus {
 	margin: 10px;
 }
 
+.email_link {
+	vertical-align: middle;
+}
+
 /*==================== 
 		HOME
 ======================*/
